--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="/home/yuriy/Рабочий стол/andengine.jar" sourcepath="/home/yuriy/programming/android/andengine/src"/>
+	<classpathentry kind="lib" path="/home/yuriy/programming/android/andengine.jar" sourcepath="/home/yuriy/programming/android/andengine"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
