--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	android:versionCode="1" android:versionName="1.0" package="eastyle.gopdefence">
 	<uses-sdk android:minSdkVersion="8" />
-
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+	android:debuggable="true">
 		<activity android:name=".GameActivity"
 			android:label="@string/app_name">
 			<intent-filter>
